route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pvc-sample
  name: pvc-sample
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: pvc-sample
    weight: 100
  wildcardPolicy: None
